cambios en nav e iconos footer

--- a/cafe.html
+++ b/cafe.html
@@ -17,14 +17,21 @@
 		<a href="index.html"><img src="img/logonegro.png" width="200" height="160" alt="LOGO" class="imgcentrada"></a>
 	</header>
 
-	<nav>
-		<ul class="nav justify-content-center">
-			<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-			<li class="nav-item"><a class="nav-link-active" href="#body">Café</a></li>
-			<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-			<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-			<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-		</ul>
+	<nav class="navbar navbar-expand-lg navbar-dark p-0">
+		 <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
+		 <div class="collapse navbar-collapse justify-content-md-center">
+	   		 <div class="row w-100 px-0">
+	      		<div class="col-12 pl-lg-0 p-0"> 
+					<ul class="navbar-nav justify-content-center">
+						<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+						<li class="nav-item"><a class="nav-link-active" href="#body">Café</a></li>
+						<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+						<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+						<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>	
 	</nav>
 	<main>
 		<h1 class="mb-4 text-md-center">Descubrí nuestros cafés</h1>
@@ -81,12 +88,13 @@
 				</ul>
 			</div>	
 			<div>
-				<h3><strong>Seguinos</strong></h3>
-				<img src="img/ig.jpg" width="20" height="20" alt="IG logo">
-				<img src="img/fb.jpg" width="20" height="20"alt="FB logo">
-				<img src="img/pin.png" width="20" height="20"alt="Pinterest logo">
-				<img src="img/YTb.jpg" width="20" height="20" alt="YouTube logo"><br><br>
-			</div>
+                <h3><strong>Seguinos</strong></h3>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-whatsapp"></i>
+            </div>
 		</div>
 		<p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
 
@@ -94,5 +102,6 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	 <script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
 </body>
 </html>
