--- a/contacto.html
+++ b/contacto.html
@@ -17,15 +17,22 @@
 		<a href="index.html"><img src="img/logonegro.png" width="200" height="160" alt="LOGO" class="imgcentrada"></a>
 	</header>
 
-	<nav>
-		<ul class="nav justify-content-center">
-			<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-			<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
-			<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-			<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-			<li class="nav-item"><a class="nav-link-active" href="#body">Contacto</a></li>
-		</ul>
-	</nav>
+	<nav class="navbar navbar-expand-lg navbar-dark p-0">
+         <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
+         <div class="collapse navbar-collapse justify-content-md-center">
+             <div class="row w-100 px-0">
+                <div class="col-12 pl-lg-0 p-0"> 
+                    <ul class="navbar-nav justify-content-center">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
+                        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link-active" href="#index">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>  
+    </nav>
 	<main> 
     	<h1 class="mb-4 text-md-center">Conectate con nosotros</h1><br>
     	<div class="container">
@@ -114,10 +121,11 @@
             </div>  
             <div>
                 <h3><strong>Seguinos</strong></h3>
-                <img src="img/ig.jpg" width="20" height="20" alt="IG logo">
-                <img src="img/fb.jpg" width="20" height="20"alt="FB logo">
-                <img src="img/pin.png" width="20" height="20"alt="Pinterest logo">
-                <img src="img/YTb.jpg" width="20" height="20" alt="YouTube logo"><br><br>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-whatsapp"></i>
             </div>
         </div>
         <p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
@@ -126,5 +134,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>	
+    <script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
 </body>
 </html>
