--- a/contacto.html
+++ b/contacto.html
@@ -17,20 +17,16 @@
 		<a href="index.html"><img src="img/logonegro.png" width="200" height="160" alt="LOGO" class="imgcentrada"></a>
 	</header>
 
-	<nav class="navbar navbar-expand-lg navbar-dark p-0">
-         <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
-         <div class="collapse navbar-collapse justify-content-md-center">
-             <div class="row w-100 px-0">
-                <div class="col-12 pl-lg-0 p-0"> 
-                    <ul class="navbar-nav justify-content-center">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
-                        <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link-active" href="#index">Contacto</a></li>
-                    </ul>
-                </div>
-            </div>
+	<nav class="navbar navbar-expand-md navbar-dark p-0">
+        <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
+            <ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
+                <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+                <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                <li class="nav-item"><a class="nav-link-active" href="#index">Contacto</a></li>
+            </ul>
         </div>  
     </nav>
 	<main> 
