--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat+Alternates:ital,wght@0,400;0,500;0,600;1,300;1,400&family=Montserrat:ital,wght@0,200;0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/estiloprueba.css"/>
+	<script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
+	
 </head>
 
 <body>
@@ -17,21 +19,17 @@
 		<a href="index.html"><img src="img/logonegro.png" width="200" height="160" alt="LOGO" class="imgcentrada"></a>
 	</header>
 
-	<nav class="navbar navbar-expand-lg navbar-dark p-0">
-		 <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navigations-02"><span class="navbar-toggler-icon"></span></button>
-		 <div class="collapse navbar-collapse justify-content-md-center">
-	   		 <div class="row w-100 px-0">
-	      		<div class="col-12 pl-lg-0 p-0"> 
-					<ul class="navbar-nav justify-content-center">
-						<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
-						<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-						<li class="nav-item"><a class="nav-link-active" href="#body">Nosotros</a></li>
-						<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>	
+	<nav class="navbar navbar-expand-md navbar-dark p-0">
+		 <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
+		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
+			<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
+				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+				<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
+				<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
+				<li class="nav-item"><a class="nav-link-active" href="#body">Nosotros <span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+			</ul>
+		</div>
 	</nav>
 	<main class="container-fluid">
 		<div class="row">
@@ -103,6 +101,6 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-	 <script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
+
 </body>
 </html>
