ajuste gradiente de fondo y align navbar

--- a/nosotros.html
+++ b/nosotros.html
@@ -20,13 +20,13 @@
 	</header>
 
 	<nav class="navbar navbar-expand-md navbar-dark p-0">
-		 <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
+		 <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
 		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
 			<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
 				<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-				<li class="nav-item"><a class="nav-link-active" href="#body">Nosotros <span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="#body">Nosotros</a></li>
 				<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
 			</ul>
 		</div>
@@ -40,7 +40,7 @@
 			
   		<div class="container text-center" id="cuaderno">
 	   		<h1 class="mb-4 text-md-center">Nuestra Historia</h1>
-	   		<p class="lead mb-5">Obsesionados por lograr un café perfecto, nos sumergimos en este fantástico y apasionante mundo, aprendimos de tostación, de cata y de cómo servirlo... Así descubrimos una nueva pasión y la satisfacción de conseguir una perfecta taza de café cada mañana. Y como nos gusta compartir empezamos a tostar para amigos, nos motivaron a seguir entonces abrimos nuestro primer local y crecimos gracias al boca a boca y entonces abrimos un segundo local y aquí estamos avanzando... Manteniendo nuestro stándard de calidad y servicio, porque uno no puede cambiar de pasión</p>
+	   		<p class="lead mb-5 text-light">Obsesionados por lograr un café perfecto, nos sumergimos en este fantástico y apasionante mundo, aprendimos de tostación, de cata y de cómo servirlo... Así descubrimos una nueva pasión y la satisfacción de conseguir una perfecta taza de café cada mañana. <span class="d-none d-sm-none d-lg-block"> Y como nos gusta compartir empezamos a tostar para amigos, nos motivaron a seguir entonces abrimos nuestro primer local y crecimos gracias al boca a boca y entonces abrimos un segundo local y aquí estamos avanzando... Manteniendo nuestro stándard de calidad y servicio, porque uno no puede cambiar de pasión</span></p>
        	</div>
     </main>
 
