--- a/contacto.html
+++ b/contacto.html
@@ -18,14 +18,14 @@
 	</header>
 
 	<nav class="navbar navbar-expand-md navbar-dark p-0">
-        <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
             <ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
                 <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
                 <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link-active" href="#index">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="#index">Contacto</a></li>
             </ul>
         </div>  
     </nav>
@@ -61,7 +61,7 @@
                                 <div>
                                     <select class="mb-2 custom-select" id="inlineFormCustomSelect">
                 					   <option selected>Asunto</option>
-                					   <option value="1">Sugerencias y/o reclamos.</option>
+                					   <option value="1">Comprar</option>
                 					   <option value="2">Trabajar con nosotros</option>
                 					   <option value="3">Otros</option>
                                         <option value="4">Sugerencias y/o reclamos.</option>
@@ -96,7 +96,7 @@
                         <h3>VILLA CRESPO</h3>
                         <p>
                            <h4>DIRECCIÓN 1</h4>
-                           <h5>08.30 A 20.30</h5>
+                           <h5>08:30 A 20:30</h5>
                         </p>
                     </div>
                 </div>
