--- a/galeria.html
+++ b/galeria.html
@@ -18,12 +18,12 @@
 	</header>
 
 	<nav class="navbar navbar-expand-md navbar-dark p-0">
-		 <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
+		 <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
 		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
 	   		<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
-				<li class="nav-item"><a class="nav-link-active" href="#body">Galería <span class="sr-only">(current)</span></a></li>
+				<li class="nav-item"><a class="nav-link" href="#body">Galería</span></a></li>
 				<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
 				<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
 			</ul>
