--- a/cafe.html
+++ b/cafe.html
@@ -22,8 +22,8 @@
 		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
 	   		<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-				<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
-				<li class="nav-item"><a class="nav-link" href="#body">Galería </a></li>
+				<li class="nav-item"><a class="nav-link" href="#body">Café</a></li>
+				<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
 				<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
 				<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
 			</ul>
