agrgego pag 404 con estilo, actualizo README y ajustes de estilo

--- a/cafe.html
+++ b/cafe.html
@@ -19,15 +19,15 @@
 
 	<nav class="navbar navbar-expand-md navbar-dark p-0">
 		 <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
-		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
-	   		<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
+		 <div class="collapse navbar-collapse" id="nav2">
+			<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="#body">Café</a></li>
 				<li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
 				<li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
 				<li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
 			</ul>
-		</div>	
+		</div>
 	</nav>
 
 	<main>
@@ -55,15 +55,15 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md tipo">
+			<div class="col-md tipo1">
 				<h3>Colombia</h3>  
 				<p>De gusto frutado y aroma floral, es un café suave con delicada acidez. Blend de tostado Natural</p>
 			</div>
-			<div class="col-md tipo">
+			<div class="col-md tipo1">
 				<h3>Sumatra</h3>
 				<p>Café de sabor intenso, con cuerpo consistente y completo, de aroma profundo y terroso. Varietal de tostado Natural</p>
 			</div>		
-			<div class="col-md tipo">
+			<div class="col-md tipo1">
 				<h3>Zucca</h3> 
 				<p>Aroma a cacao y sabor tostado dulce, café de estilo italiano. Varietal de tostado Natural</p>
 			</div>
@@ -99,6 +99,6 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	 <script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
+	<script src="https://kit.fontawesome.com/adb832cd35.js" crossorigin="anonymous"></script>
 </body>
 </html>
