--- a/nosotros.html
+++ b/nosotros.html
@@ -10,8 +10,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat+Alternates:ital,wght@0,400;0,500;0,600;1,300;1,400&family=Montserrat:ital,wght@0,200;0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/estiloprueba.css"/>
-	<script src="http:kit.fontawesome.com/adb832cd35.js" crossorigin=anonymous></script>
-	
+		
 </head>
 
 <body>
@@ -61,7 +60,7 @@
        		</div>
        		<div class="col-md-6 mb-4 mb-md-0 order-0 text-center">
               	<h2 class="mb-4">Desde el origen...</h2>
-	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando en color y densidad. Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso</p>
+	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando en color y densidad. <span class="d-none d-sm-none d-lg-block"> Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso <span></p>
 		    </div>
       	</div>
 		<div class="row align-items-center text-md-left mb-5 bg-light">
@@ -70,7 +69,7 @@
 	    	</div>
 	        <div class="col-md-6 mb-4 mb-md-0 text-center">
 	           	<h2 class="mb-4">El resultado</h2>
-	          	<p>Cuando ya está listo, lo envasamos para que no pierda su frecura y ya está listo para consumir, dentro de los 60 días. Tostamos en cantidades ideales para mantener su frescura y sabor, las diferentes técnicas nos permiten jugar con blends y buscar nuevos sabores, logrando así un café solo para exigentes.</p>
+	          	<p>Finalmente, lo envasamos para que no pierda su frecura y ya está listo para consumir (dentro de los 60 días). Tostamos en cantidades ideales para mantener su frescura y sabor, las diferentes técnicas nos permiten jugar con blends y buscar nuevos sabores, logrando así un café solo para exigentes.</p>
 	        </div>
     	</div>
   	</section>
@@ -101,6 +100,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/adb832cd35.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
