corrección error redacción en p

--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,7 @@
        		</div>
        		<div class="col-md-6 mb-4 mb-md-0 order-0 text-center">
               	<h2 class="mb-4">Desde el origen...</h2>
-	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando en color y densidad. <span class="d-none d-sm-none d-lg-block"> Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso <span></p>
+	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando el color y densidad. <span class="d-none d-sm-none d-lg-block"> Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso <span></p>
 		    </div>
       	</div>
 		<div class="row align-items-center text-md-left mb-5 bg-light">
