cambio de estilo cafe.html y ajuste tamaño img en index, subida nuevas img

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 	</nav>
 
-	<main class="container mt-4">
+	<main class="container mt-4"><!--Carousel con links-->
 		<div id="carouselInicio" class="carousel slide" data-ride="carousel">
   			<ol class="carousel-indicators">
 			    <li data-target="#carouselInicioCaptions" data-slide-to="0" class="active"></li>
@@ -84,7 +84,7 @@
                             <img src="img/localinterior.jpg" alt="vista superior del interior local colegiales"/>
                         </div>
                         <div class="textContainer">                                 
-                            <p>Take-away y mesitas al aire libre. Te esperamos..</p>
+                            <p>Estamos listos para recibirte en nuestros locales. Te esperamos..</p>
                             <a href="contacto.html"class="btn">ENCONTRANOS</a>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                     		<img src="img/sandwich.jpg" alt="duo de sandwiches sobre tabla con cherrys y cuenco con aderezo"/>
                        </div>
                        <div class="textContainer">                         
-                            <p>Sabor, frescura y calidad en todos nuestros productos...</p>
+                            <p>Sabor, frescura y calidad en todos nuestros productos, todos los días...</p>
                             <a href="galeria.html" class="btn">DELEITATE</a>
                         </div>
                     </div>
