ultimos cambios: Link redes, zoom a img galeria y flipcardack/text carousel para SM

--- a/nosotros.html
+++ b/nosotros.html
@@ -30,6 +30,7 @@
 			</ul>
 		</div>
 	</nav>
+
 	<main class="container-fluid">
 		<div class="row">
 			<div class="col-md">	
@@ -44,7 +45,7 @@
     </main>
 
     <section class="py-5">   	
-    	<div class="row align-items-center text-md-left mb-5 bg-light">
+    	<div class="row align-items-center mx-0 text-md-left mb-5 bg-light">
        		<div class="col-md-6 order-1 order-md-0">
        			<img class="img-fluid" src="img/recoleccion.jpg" alt="planta de cafe con manos recolectando granos">
        		</div>
@@ -54,16 +55,16 @@
        			<p>De acuerdo a la Specialty Coffee Association of America (SCAA), un café de especialidad es aquel que no presenta defectos y tiene un sabor distintivo en la taza. Esto quiere decir que su sabor es notablemente bueno. El origen, selección y plantación, son factores importantes para el café de especialidad.</p>
        		</div>
     	</div>
-    	<div class="row align-items-center text-md-right mb-5">
+    	<div class="row align-items-center mx-0 text-md-right mb-5">
        		<div class="col-md-6 order-1">
        			<img class="img-fluid" src="img/tostadora.jpg" alt="máquina tostadora de café">
        		</div>
        		<div class="col-md-6 mb-4 mb-md-0 order-0 text-center">
               	<h2 class="mb-4">Desde el origen...</h2>
-	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando el color y densidad. <span class="d-none d-sm-none d-lg-block"> Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso <span></p>
+	          	<p> El café que tostamos es de especialidad, debido a que se cultivó y fue producido bajo estrictos controles de calidad. Incorporamos al proceso solo granos de puntuación 80+. Cuando se tuesta, el grano de café verde aumenta su tamaño hasta casi el doble, cambiando el color y densidad. <span class="d-none d-sm-none d-lg-block"> Dado que el grano absorbe calor, el color cambia a amarillo, después a un ligero color marrón, y finalmente a un color oscuro y aceitoso <span></p> <!--span texto oculto en Small-->
 		    </div>
       	</div>
-		<div class="row align-items-center text-md-left mb-5 bg-light">
+		<div class="row align-items-center mx-0 text-md-left mb-5 bg-light">
 	    	<div class="col-md-6 order-1 order-md-0">
 	    		<img class="img-fluid" src="img/perfectcup.jpg" alt="fondo deck celeste con taaza de café en sobre tablita con cookies">
 	    	</div>
@@ -85,18 +86,18 @@
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</div>	
-			<div>
+			<div id="redes">
                 <h3><strong>Seguinos</strong></h3>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-pinterest"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-whatsapp"></i>
+                <a href="http://instagram.com"><i class="fab fa-instagram"></i><a>
+                <a href="http://pinterest.com"><i class="fab fa-pinterest"></i></a>
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="http://facebook.com"> <i class="fab fa-facebook"></i></a>
             </div>
 		</div>
 		<p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
 	</footer>
 
+<!-- JS, Popper.js, jQuery and Fontawesome-->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
