--- a/cafe.html
+++ b/cafe.html
@@ -34,15 +34,15 @@
 		<h1 class="mb-4 text-md-center">Descubrí nuestros cafés</h1>
 		<div class="intro">
 			<h2>Café rico y fresco en tu casa siempre...</h2></div>
-			<p class="italica mx-2 px-4">En Vapor podés comprar el mismo café que usamos en el local, llevalo en grano o molido en el momento, en el punto perfecto para tu cafetera. <span class="d-none d-sm-none d-lg-block"> Elegí entre las siguientes variedades y disfrutá de un café de alta calidad en tu casa...</span></p>
+			<p class="italica mx-0 px-4">En Vapor podés comprar el mismo café que usamos en el local, llevalo en grano o molido en el momento, en el punto perfecto para tu cafetera. <span class="d-none d-sm-none d-lg-block"> Elegí entre las siguientes variedades y disfrutá de un café de alta calidad en tu casa...</span></p><!--span texto oculto en small-->
 		</div>
 	</main>
 		
-	<section class="containerCafes">
+	<section class="containerCafes"> <!--Flipping card-->
 		<div class="flipCard">
 		  <div class="flipCardInner">
 		    <div class="flipCardFront">
-		    	 <img class= "img-fluid" src="img/bolsitaBarista.jpg">
+		    	 <img class= "img-fluid" src="img/bolsitaBarista.jpg" alt="bolsa de papel cafe Barista">
 		    	 <h3 class="nombre pt-2">BARISTA</h3>
 		    </div>
 		    <div class="flipCardBack">
@@ -53,9 +53,9 @@
 		</div>
 
 		<div class="flipCard">
-		  	<div class="flipCardInner">
+		  	<div class="flipCardInner"> 
 		    	<div class="flipCardFront"> 
-		     		<img class= "img-fluid" src="img/bolsitaSumatra.jpg">
+		     		<img class= "img-fluid" src="img/bolsitaSumatra.jpg" alt="bolsa de papel cafe Sumatra">
 		 			<h3 class="nombre pt-2">SUMATRA</h3>
 		        </div>
 		    	<div class="flipCardBack">
@@ -68,7 +68,7 @@
 		<div class="flipCard">
 		  	<div class="flipCardInner">
 		    	<div class="flipCardFront">
-		    		<img class= "img-fluid" src="img/bolsitacolombia.jpg">
+		    		<img class= "img-fluid" src="img/bolsitacolombia.jpg" alt="bolsa de papel cafe Colombia">
 		    		<h3 class="nombre pt-2">COLOMBIA</h3>
 		     	</div>
 		    	<div class="flipCardBack">
@@ -81,7 +81,7 @@
 		<div class="flipCard">
 		  	<div class="flipCardInner">
 		    	<div class="flipCardFront"> 
-		     		<img class= "img-fluid" src="img/bolsitaroast.jpg">
+		     		<img class= "img-fluid" src="img/bolsitaroast.jpg" alt="bolsa de papel cafe Roast">
 		 			<h3 class="nombre pt-2">ROAST</h3>
 		        </div>
 		    	<div class="flipCardBack">
@@ -94,7 +94,7 @@
 		<div class="flipCard">
 			<div class="flipCardInner">
 		    	<div class="flipCardFront">
-		    		<img class= "img-fluid" src="img/bolsitaBrasil.jpg">
+		    		<img class= "img-fluid" src="img/bolsitaBrasil.jpg" alt="bolsa de papel cafe brasil">
 		    		<h3 class="nombre pt-2">BRASIL</h3>
 		    	</div>
 		    	<div class="flipCardBack">
@@ -107,7 +107,7 @@
 		<div class="flipCard">
 			<div class="flipCardInner">
 		    	<div class="flipCardFront"> 
-		      		<img class= "img-fluid" src="img/bolsitaZucca.jpg">
+		      		<img class= "img-fluid" src="img/bolsitaZucca.jpg" alt="bolsa de papel cafe zucca">
 		 			<h3 class="nombre pt-2">ZUCCA</h3>          
 		        </div>
 		    	<div class="flipCardBack">
@@ -116,8 +116,6 @@
 		    	</div>
 		  	</div>
 		</div>
-				
-				
 	</section>
 	
 	<p><a href="contacto.html">Compra desde tu casa</a></p> <!--provisorio hasta tener carrito-->
@@ -133,19 +131,18 @@
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</div>	
-			<div>
+			<div id="redes">
                 <h3><strong>Seguinos</strong></h3>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-pinterest"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-whatsapp"></i>
+                <a href="http://instagram.com"><i class="fab fa-instagram"></i><a>
+                <a href="http://pinterest.com"><i class="fab fa-pinterest"></i></a>
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="http://facebook.com"> <i class="fab fa-facebook"></i></a>
             </div>
 		</div>
 		<p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
-
 	</footer>
 
+<!-- JS, Popper.js, jQuery and Fontawesome-->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>	
