--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,9 @@
             </ul>
         </div>  
     </nav>
+    
 	<main> 
+    <!--Formulario de contacto--> 
     	<h1 class="mb-4 text-md-center">Conectate con nosotros</h1><br>
     	<div class="container">
             <div class="row">
@@ -82,7 +84,7 @@
                         </fieldset>
                     </form>
                 </div>
-                       
+    <!--Sucursales con imagen de fondo-->
                 <div class="col-md-6 pr-0">
                     <h2 id="dondeEstamos">Dónde estamos...</h2>
                     <div class="sucursales local1">
@@ -95,7 +97,7 @@
                     <div class="sucursales local2">
                         <h3>VILLA CRESPO</h3>
                         <p>
-                           <h4>DIRECCIÓN 1</h4>
+                           <h4>DIRECCIÓN 2</h4>
                            <h5>08:30 A 20:30</h5>
                         </p>
                     </div>
@@ -115,18 +117,18 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </div>  
-            <div>
+           <div id="redes">
                 <h3><strong>Seguinos</strong></h3>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-pinterest"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-whatsapp"></i>
+                <a href="http://instagram.com"><i class="fab fa-instagram"></i><a>
+                <a href="http://pinterest.com"><i class="fab fa-pinterest"></i></a>
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="http://facebook.com"> <i class="fab fa-facebook"></i></a>
             </div>
         </div>
         <p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
     </footer>
 	
+    <!-- JS, Popper.js, jQuery, fontawesome -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>	
