--- a/galeria.html
+++ b/galeria.html
@@ -19,8 +19,8 @@
 
 	<nav class="navbar navbar-expand-md navbar-dark p-0">
 		 <button class="navbar-toggler ml-auto hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#nav2"><span class="navbar-toggler-icon"></span></button>
-		 <div class="collapse navbar-collapse justify-content-md-center" id="nav2">
-	   		<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
+		 <div class="collapse navbar-collapse" id="nav2">
+			<ul class="navbar-nav justify-content-center col-12 pl-lg-0 p-0">
 				<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="cafe.html">Café</a></li>
 				<li class="nav-item"><a class="nav-link" href="#body">Galería</span></a></li>
@@ -29,9 +29,11 @@
 			</ul>
 		</div>	
 	</nav>
+
 	<main>
 		<h1 class="mb-4 text-md-center">PREPARATE PARA DISFRUTAR...</h1>
-		<div class="row">
+		<div class="row mx-0">
+	<!--grid de imagenes-->
 		  	<div class="column">
 		    	<img src="img/latte.jpg" alt="cafe con leche en vajilla negra">
 		    	<img src="img/torrebrownie.jpg" alt="Brownies apilados con dulce de leche">
@@ -53,6 +55,7 @@
 		</div>
 		<p><a href="contacto.html">Te esperamos en nuestros locales</a></p>
 	</main>
+	
 	<footer>
 		<h2 id="vapor">VAPOR CAFÉ</h2>
 		<div class="containerFooter">
@@ -64,20 +67,19 @@
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</div>	
-			<div>
+			<div id="redes">
                 <h3><strong>Seguinos</strong></h3>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-pinterest"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-whatsapp"></i>
+                <a href="http://instagram.com"><i class="fab fa-instagram"></i><a>
+                <a href="http://pinterest.com"><i class="fab fa-pinterest"></i></a>
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="http://facebook.com"> <i class="fab fa-facebook"></i></a>
             </div>
 		</div>
 		<p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
 
 	</footer>
 	
-
+<!-- JS, Popper.js, jQuery and Fontawesome-->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
