--- a/index.html
+++ b/index.html
@@ -30,46 +30,43 @@
 		</div>
 	</nav>
 
-	<main class="container mt-4"><!--Carousel con links-->
-		<div id="carouselInicio" class="carousel slide" data-ride="carousel">
-  			<ol class="carousel-indicators">
-			    <li data-target="#carouselInicioCaptions" data-slide-to="0" class="active"></li>
-			    <li data-target="#carouselInicioCaptions" data-slide-to="1"></li>
-			    <li data-target="#carouselInicioCaptions" data-slide-to="2"></li>
-  			</ol>
+	<main class="container mt-4">
+	<!--Carousel con links-->
+		<div id="carouselInicio" class="carousel slide carousel-fade" data-ride="carousel">
 	  		<div class="carousel-inner">
 	    		<div class="carousel-item active">
 	      			<img src="img/granos3.jpg" class="d-block w-100" alt="manos juntando granos de cafe">
-		      		<div class="carousel-caption d-none d-md-block">
-		        		<h5>Café Tostado artesanal</h5>
-		        		<p class="carouselP">Café de especialidad tostado por nuestros expertos, disfrutalos en bebidas calientes o frías; disponibles también en <a href="cafe.html" class="linkCarousel">grano o molido en el momento.</a></p>
+		      		<div class="carousel-caption">
+		        		<h5 class="textCarousel">Café Tostado artesanal</h5>
+		        		<p class="carouselP d-none d-md-block">Café de especialidad tostado por nuestros expertos, disfrutalos en bebidas calientes o frías; disponibles también en <a href="cafe.html" class="linkCarousel">grano o molido en el momento.</a></p>
 		      		</div>
 	    		</div>
 	    		<div class="carousel-item">
 	      			<img src="img/vegano.jpg" class="d-block w-100" alt="tabla con productos vegetarianos">
-	      			<div class="carousel-caption d-none d-md-block">
-	        			<h5>Vegans Welcome</h5>
-	       				<p class="carouselP">Incorporamos a nuestra carta opciones para veganos y vegetarianos...</p>
+	      			<div class="carousel-caption">
+	        			<h5 class="textCarousel">Vegans Welcome</h5>
+	       				<p class="carouselP d-none d-md-block">Incorporamos a nuestra carta opciones para veganos y vegetarianos...</p>
 	      			</div>
 	    		</div>
 	    		<div class="carousel-item">
 	      			<img src="img/glutenfree.jpg" class="d-block w-100" alt="tabla con productos sin gluten">
-	      			<div class="carousel-caption d-none d-md-block">
-	        			<h5>Menú Celíacxs</h5>
-	        			<p class=carouselP>Estamos armando un menú gluten-free, <a href="contacto.html" class="linkCarousel">dejanos tus sugerencias, recomendaciones o tips.</a> Gracias!!</p>
+	      			<div class="carousel-caption">
+	        			<h5 class="textCarousel">Menú Celíacxs</h5>
+	        			<p class="carouselP d-none d-md-block">Estamos armando un menú gluten-free, <a href="contacto.html" class="linkCarousel">dejanos tus sugerencias, recomendaciones o tips.</a> Gracias!!</p>
 	      			</div>
 	    		</div>
 	  		</div>
-		  	<a class="carousel-control-prev" href="#carouselInicioCaptions" role="button" data-slide="prev">
+		  	<a class="carousel-control-prev" href="#carouselInicio" role="button" data-slide="prev">
 			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			    <span class="sr-only">Previous</span>
 		  	</a>
-		  	<a class="carousel-control-next" href="#carouselInicioCaptions" role="button" data-slide="next">
+		  	<a class="carousel-control-next" href="#carouselInicio" role="button" data-slide="next">
 			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
 			    <span class="sr-only">Next</span> 
 		  	</a>	
 		</div>
 		
+ 	<!--Texto con fondo madera-->	
 		<div class="container textoInicial">
 			<h1 class="italica">En <em>VAPOR</em> sabemos que la mejor manera de arrancar el día es con un <em>CAFÉ</em>.</h1>
 		</div>
@@ -126,20 +123,19 @@
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</div>	
-			<div>
+			<div id="redes">
                 <h3><strong>Seguinos</strong></h3>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-pinterest"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-whatsapp"></i>
+                <a href="http://instagram.com"><i class="fab fa-instagram"></i><a>
+                <a href="http://pinterest.com"><i class="fab fa-pinterest"></i></a>
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="http://facebook.com"> <i class="fab fa-facebook"></i></a>
             </div>
 		</div>
 		<p class="pie">© 2020 Copyright Vapor Cafe. Todos los derechos reservados. <img src="img/qr.png" width="50" height="60"alt="QR"></p>
 	</footer>
 
 
-<!-- JS, Popper.js, and jQuery -->
+<!-- JS, Popper.js, jQuery and Fontawesome-->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
